@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install
+DESCRIPTION=A somewhat comprehensive collection of Linux man pages
+EAPI=4
+HOMEPAGE=http://www.kernel.org/doc/man-pages/
+IUSE=nls linguas_da linguas_de linguas_fr linguas_it linguas_ja linguas_nl linguas_pl linguas_ro linguas_ru linguas_zh_CN
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~amd64-linux ~arm-linux ~ia64-linux ~x86-linux
+LICENSE=man-pages GPL-2+ BSD
+PDEPEND=nls? ( linguas_da? ( app-i18n/man-pages-da ) linguas_de? ( app-i18n/man-pages-de ) linguas_fr? ( app-i18n/man-pages-fr ) linguas_it? ( app-i18n/man-pages-it ) linguas_ja? ( app-i18n/man-pages-ja ) linguas_nl? ( app-i18n/man-pages-nl ) linguas_pl? ( app-i18n/man-pages-pl ) linguas_ro? ( app-i18n/man-pages-ro ) linguas_ru? ( app-i18n/man-pages-ru ) linguas_zh_CN? ( app-i18n/man-pages-zh_CN ) ) sys-apps/man-pages-posix
+RDEPEND=virtual/man !<dev-libs/libaio-0.3.109-r2
+RESTRICT=binchecks
+SLOT=0
+SRC_URI=mirror://kernel/linux/docs/man-pages/Archive/man-pages-4.00.tar.xz mirror://kernel/linux/docs/man-pages/man-pages-4.00.tar.xz http://man7.org/linux/man-pages/download/man-pages-4.00.tar.xz mirror://gentoo/man-pages-gentoo-2.tar.bz2 http://dev.gentoo.org/~cardoe/files/man-pages-gentoo-2.tar.bz2
+_md5_=5c75ff842a0753e39e3be85387573c12
