@@ -4,7 +4,7 @@ DESCRIPTION=The GNU Compiler Collection
 EAPI=4
 HOMEPAGE=http://gcc.gnu.org/
 IUSE=multislot regression-test vanilla altivec nopie nossp doc gcj awt hardened multilib objc objc-gc mudflap libssp objc++ fixed-point go +nls +nptl +cxx +fortran +openmp
-KEYWORDS=~alpha ~amd64 arm hppa ia64 m68k ~mips ~ppc ~ppc64 s390 sh ~sparc ~x86 -amd64-fbsd -x86-fbsd
+KEYWORDS=~alpha ~amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh ~sparc ~x86 -amd64-fbsd -x86-fbsd
 LICENSE=GPL-3+ LGPL-3+ || ( GPL-3+ libgcc libstdc++ gcc-runtime-library-exception-3.1 ) FDL-1.3+
 PDEPEND=elibc_glibc? ( >=sys-libs/glibc-2.8 ) >=sys-devel/gcc-config-1.7
 RDEPEND=sys-libs/zlib nls? ( virtual/libintl ) virtual/libiconv >=dev-libs/gmp-4.3.2 >=dev-libs/mpfr-2.4.2 >=dev-libs/mpc-0.8.1
@@ -12,4 +12,4 @@ RESTRICT=strip
 SLOT=4.7
 SRC_URI=mirror://gnu/gcc/gcc-4.7.4/gcc-4.7.4.tar.bz2 mirror://gentoo/gcc-4.7.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.7.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.7.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.7.4-uclibc-patches-1.0.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.7.4-uclibc-patches-1.0.tar.bz2 mirror://gentoo/gcc-4.7.4-patches-1.2.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.7.4-patches-1.2.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.7.4-patches-1.2.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.7.4-patches-1.2.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.7.4-patches-1.2.tar.bz2 mirror://gentoo/gcc-4.7.4-piepatches-v0.5.5.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.7.4-piepatches-v0.5.5.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.7.4-piepatches-v0.5.5.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.7.4-piepatches-v0.5.5.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.7.4-piepatches-v0.5.5.tar.bz2 mirror://gentoo/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~vapier/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~rhill/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~zorry/patches/gcc/gcc-4.4.3-specs-0.2.0.tar.bz2 http://dev.gentoo.org/~blueness/dist/gcc-4.4.3-specs-0.2.0.tar.bz2 gcj? ( ftp://sourceware.org/pub/java/ecj-4.5.jar )
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fixheadtails	c6fd1fc49c9dc11924f28a1406f251a0	flag-o-matic	5d5921a298e95441da2f85be419894c0	gnuconfig	00a0530e40148c254cebb925df0e87ef	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	toolchain	aaa2cd2369e57f46b02dfd62059a838e	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=7d20b48b12694aab849e7c9e027c4708
+_md5_=a08f4065a8056e149ee167a7c4187092
