@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/gcc
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.1070 2015/05/07 04:47:27 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.1071 2015/05/07 13:35:38 blueness Exp $
+
+  07 May 2015; Anthony G. Basile <blueness@gentoo.org> gcc-4.7.4.ebuild:
+  Stable for ppc and ppc64.  Bug #548802.
 
   07 May 2015; Mike Frysinger <vapier@gentoo.org> gcc-4.7.4.ebuild:
   Mark arm/ia64/m68k/s390/sh stable #548802.
